kubernetes/apps/media/comet/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comet-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Comet
    gethomepage.dev/pod-selector: app.kubernetes.io/name=comet
    gethomepage.dev/icon: mdi-rocket
spec:
  hostnames:
    - comet.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: comet
          port: 80
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cometnet-480p-com
spec:
  hostnames:
    - cometnet.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: comet
          port: 8765
